# goa-server

./: .env  Cargo.toml  README.md
migrations/: 0001_create_customers_table.sql  0002_create_quotation_table.sql  20250422155000_create_customers.sql  20250422155000_create_customers_table.sql  20250427223700_create_quotation.sql  20250529113400_create_email.sql  20250606174500_create_order.sql  20250606174700_create_supplier.sql  20250607222200_create_invoice.sql
src/: db.rs  error.rs  init_routes.rs  lib.rs  main.rs
src/common/: macros.rs  mod.rs  packing.rs  pagination.rs  router.rs
src/controllers/: quotation.rs
src/handlers/: customer.rs  mod.rs  quotation.rs
src/models/: customer.rs  mod.rs  pagination.rs  quotation.rs
src/modules/: mod.rs
src/modules/customer/: controller.rs  mod.rs  model.rs  plugin.rs  repo.rs  repository.rs  route.rs  service.rs
src/modules/email/: controller.rs  mod.rs  model.rs  plugin.rs  repository.rs  route.rs  service.rs
src/modules/invoice/: controller.rs  model.rs  plugin.rs  repo.rs  route.rs  service.rs
src/modules/order/: controller.rs  mod.rs  model.rs  plugin.rs  repo.rs  repository.rs  route.rs  service.rs
src/modules/quotation/: controller.rs  model.rs  plugin.rs  repo.rs  repository.rs  route.rs  service.rs
src/modules/supplier/: controller.rs  mod.rs  model.rs  plugin.rs  repo.rs  repository.rs  route.rs  service.rs
src/plugin/: core.rs  loader.rs  mod.rs
src/repositories/: mod.rs  quotation.rs
src/routes/: customer.rs  mod.rs  quotation.rs
src/services/: quotation.rs
